<resources>

    <!-- Sign in / Sign up -->
    <string name="app_name">Tutor Finder</string>
    <string name="tab_text_1">Sign in</string>
    <string name="tab_text_2">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="register_as">I want to register as a:</string>
    <string name="username_required_field">You must provide a username</string>
    <string name="email_required_field">You must provide an email address</string>
    <string name="password_required_field">You must provide a password</string>
    <string name="password_validity">Enter a password of at least 6 digits</string>
    <string name="error_empty_email">Enter an E-Mail Address</string>
    <string name="error_invalid_email">Enter a Valid E-mail Address</string>
    <string name="error_empty_passwd">Enter a Password</string>
    <string name="error_invalid_passwd">Enter at least 6 Digit password</string>

    <!-- Forgotten password -->
    <string name="password_reset">Reset your password</string>
    <string name="password_reset2">Reset password</string>
    <string name="password_reset_guide">Enter the email address associated with your account to receive a password reset email.</string>

    <!-- Admin -->
    <string name="admin_portal">Admin portal</string>
    <string name="title_tutor_management">Manage tutors</string>
    <string name="title_subject_management">Manage subjects</string>
    <string name="no_registration_request">There are no tutor registration requests to review</string>
    <string name="registration_request_instructions">Only the not already reviewed tutor registration requests are listed here. Once reviewed, requests are no longer displayed below</string>
    <string name="registration_requests_nb">Registration requests to review: %1$d</string>
    <string name="no_subjects_admin">There are no tutor subjects available in the Tutor Finder app yet. Add some!</string>
    <string name="add_subject">Add a subject</string>
    <string name="add">Add</string>
    <string name="edit_subject">Edit a subject</string>
    <string name="edit">Edit</string>
    <string name="subject_deletion">Deletion of subject ref  %1$s</string>
    <string name="subject_deletion_body">"Dear tutor finder user, The subject referenced %1$s has been removed from Tutor Finder. All the sessions you registered for this subject have been removed and this subject will no longer appear among the list of subjects you saved in your profile. The Tutor Finder team"</string>

    <!-- Student/Tutor -->
    <string name="student_portal">Student portal</string>
    <string name="tutor_portal">Tutor portal</string>
    <string name="tutor_avatar">Tutor avatar</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="upcoming_sessions">Your upcoming sessions:</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="my_learning_needs">My learning needs: </string>
    <string name="my_teaching_subjects">The subjects I teach: </string>
    <string name="save_subjects_selection">Save your subjects selection</string>
    <string name="search_opt1">Search based on your learning needs:</string>
    <string name="search">Search</string>
    <string name="max_filters_search">You can only apply up to 10 subjects when searching for matching tutors</string>
    <string name="or">OR</string>
    <string name="matched_tutors">Matched tutors</string>
    <string name="instructions_matched_tutors">Click on a tutor in the list below to see further details</string>
    <string name="matched_subjects">Matched subjects:</string>
    <string name="no_results_found">No results found</string>
    <string name="search_opt2">Search based on selected subjects:</string>
    <string name="selected_tutor_profile">Selected tutor\'s profile</string>
    <string name="subjects_tutored">Subjects that can be tutored:</string>
    <string name="request_session">Request a session</string>
    <string name="request_session2">Send request</string>
    <string name="chat">Chat</string>
    <string name="subject_of_interest">The subject you are interested in:</string>
    <string name="cancel">Cancel</string>
    <string name="request_sent">Your request has been sent</string>
    <string name="no_pending_sessions">You have no pending sessions to review</string>
    <string name="subject_label">Subject:</string>
    <string name="at_label">At:</string>
    <string name="sessions_request_instructions">Only the not already reviewed session requests are listed here. Once reviewed, requests are no longer displayed below</string>
    <string name="no_upcoming_sessions">You have currently no upcoming sessions.</string>
    <string name="studentInfo">Student: %1$s (email: %2$s)</string>

    <!-- Chat -->
    <string name="send">Send</string>
    <string name="input">Input</string>
    <string name="chat_with">Chat with %1$s</string>
    <string name="no_conversation_instructions">You have no available conversations yet. Find a tutor to start a conversation</string>
    <string name="chat_user_selection">Select the user with whom you want chat</string>

    <!-- Menu options -->
    <string name="log_out">Log out</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="home">Home</string>
    <string name="learning_needs">Learning needs</string>
    <string name="taught_subjects">Taught subjects</string>
    <string name="search_tutors">Search tutors</string>
    <string name="conversations">Conversations</string>
    <string name="session_requests">Session requests</string>
    <string name="add_subjects_instructions">You have not selected any subjects yet. To do so, activate the edit mode in the top right corner of the screen</string>

    <!-- Error -->
    <string name="error_no_subjects">Oops, an error occurred. Try again later</string>
</resources>