<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_tutor"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app_perso.tutorfinder_v2.ui.user.studentTutor.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_learning_subjects"
        android:name="com.app_perso.tutorfinder_v2.ui.user.studentTutor.mySubjects.LearningSubjectsFragment"
        android:label="@string/learning_needs"
        tools:layout="@layout/fragment_learning_needs" />

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="com.app_perso.tutorfinder_v2.ui.user.studentTutor.tutor.SessionRequestsFragment"
        android:label="@string/session_requests"
        tools:layout="@layout/fragment_session_requests" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.app_perso.tutorfinder_v2.ui.user.studentTutor.chat.ChatFragment"
        android:label="@string/conversations"
        tools:layout="@layout/fragment_chat" />
</navigation>