<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ResetPasswordViewModel"
            type="com.app_perso.tutorfinder_v2.viewModel.ResetPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.forgottenPassword.ForgottenPasswordActivity" >

        <include layout="@layout/blue_toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reset_guide"
            android:textSize="14sp"
            android:lineSpacingExtra="0.036sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="0.036sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:focusable="true"
            android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={ResetPasswordViewModel.emailAddressReset}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/resetPassword"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_button_background"
            android:text="@string/password_reset2"
            android:textColor="@color/white"
            android:onClick="@{(v) -> ResetPasswordViewModel.onClickResetPasswd(v)}"/>

    </LinearLayout>

</layout>